# algotrading

./: LICENSE  README.md  pyproject.toml
tests/: test_algotrading.py
