[tool.poetry]
name = "algotrading"
version = "0.1.0"
description = "Package for Algorithmic Trading"
authors = ["Naveen Kumar Konam <naveenkonam1985@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"
jupyter = "^1.0.0"
Quandl = "^3.7.0"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
PyYAML = "^6.0"
yfinance = "^0.1.70"
pandas-datareader = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
